--- a/client/src/components/ourpartners/OurPartners.css
+++ b/client/src/components/ourpartners/OurPartners.css
@@ -7,8 +7,22 @@
     text-align: center;
   }
   
-  .container h2 {
-    margin-bottom: 10px;
+.our-container h2 {
+    text-align: center;
+    position: relative;
+    margin-bottom: 20px;
+  }
+  
+  .our-container h2::after {
+    content: "";
+    display: block;
+    width: 100px;
+    height: 4px;
+    background-color: yellow;
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
   }
   
   .container p {
