--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -11,13 +11,14 @@ body {
     color: white;
     padding: 20px;
     text-align: center;
-    position: fixed;
+    position: relative; 
     bottom: 0;
     width: 100%;
     align-items: flex-start; 
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box; 
   }
 
   .footer-section {
@@ -33,6 +34,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+    color: yellow;
   }
   
   .footer-section a {
