--- a/client/src/components/ourpartners/OurPartners.css
+++ b/client/src/components/ourpartners/OurPartners.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh; 
     text-align: center;
+    margin-top: 30px;
   }
   
 .our-container h2 {
@@ -27,5 +27,20 @@
   
   .container p {
     margin: 0;
+  }
+
+  .image-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+  }
+  
+  .image-container img {
+    max-width: 120px; 
+    height: auto;
+    margin: 10px 20px; 
+    border: 1px solid #ccc;
+    padding: 10px;
   }
   
