--- a/client/src/components/whatwedo/WhatWeDo.css
+++ b/client/src/components/whatwedo/WhatWeDo.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 160vh;
     text-align: center;
+    margin-top: 30px;
   }
   
   .do-container h2 {
