--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -1,24 +1,24 @@
 .carousel-caption-top {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 10px;
-  }
-  
-  .caption-text {
-    color: white;
-    font-size: 18px;
-  }
+  position: absolute;
+  top: 50%; 
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 10px;
+}
+
+.caption-text {
+  color: white;
+  font-size: 18px;
+}
 
 .home-section {
-    background-color: green;
-    text-align: center;
-    padding: 20px;
-  }
+  background-color: green;
+  text-align: center;
+  padding: 20px;
+}
   
   .home-section h2 {
     color: white;
