--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background: #333;
+  background: rgb(238, 210, 210);
   color: #fff;
   padding: 1rem 0;
 }
