--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -34,7 +34,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
-    color: yellow;
+    color: rgb(225, 178, 23);
   }
   
   .footer-section a {
