--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -1,59 +1,88 @@
 body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  .footer-container {
-    background-color: #357243;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    position: relative; 
-    bottom: 0;
-    width: 100%;
-    align-items: flex-start; 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box; 
-  }
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
-  .footer-section {
-    width: 30%;     
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .footer-section h3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-    color: rgb(225, 178, 23);
-  }
-  
-  .footer-section a {
-    color: white;
-  }
+.footer-container {
+  background-color: #357243;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  flex-wrap: wrap; /* Allow sections to wrap on smaller screens */
+}
 
-  .footer-copyright {
-    position: absolute;
-    bottom: 0;
-    left: 0; 
-    width: 100%;
-  }
+.footer-section {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
 
-  .footer-copyright .copyright-content {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    align-items: flex-end;
-  }
+.footer-section h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  color: rgb(225, 178, 23);
+  width: 100%; /* Force h3 to take full width */
+}
 
-  
-  
+.footer-section p {
+  width: 100%; /* Force content to take full width */
+}
+
+.footer-section a {
+  color: white;
+}
+
+.footer-section:last-child {
+  margin-bottom: 0;
+}
+
+.footer-content {
+  flex: 1;
+}
+
+.footer-section.footer-location {
+  justify-content: center; /* Center-align content */
+}
+
+.footer-section.footer-about {
+  justify-content: flex-end; /* Right-align content */
+}
+
+/* Existing styles */
+
+.footer-section.footer-copyright {
+  bottom: 0;
+  left: 0; 
+  width: 100%;
+}
+
+
+/* Use flex utilities to push each p to its respective edge */
+.footer-section.footer-copyright .copyright-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: flex-end;
+}
+
+.left-copyright {
+  margin-right: auto; /* Push the content to the far left */
+}
+
+.right-copyright {
+  margin-left: auto; /* Push the content to the far right */
+}
+
+
