:lipstick: changed the colour of the footer

--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -7,7 +7,7 @@ body {
 }
 
 .footer-container {
-  background-color: #357243;
+  background-color: red;
   color: white;
   padding: 20px;
   text-align: center;
